--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   .middle-container {
     padding-top: 70px;
     margin: 0;
-    background-color: #f2efea;
+    background-color: #b1da9a;
   }
   .skill-row {
     margin: 100px auto 100px auto;
