--- a/style.css
+++ b/style.css
@@ -33,12 +33,12 @@ body {
     margin-right: 30px;
   }
   .skill2 {
-    width: 25%;
-    height: 25%;
-    float: left;
-    margin-right: 30px;
+    width: 40%;
+    height: 40%;
+    float: right;
+    margin-left: 30px;
   }
-  #para1 {
+#para1 {
     clear: left;
     text-align: right;
     font-size: 1.2rem;
